netcfg (1.18) UNRELEASED; urgency=low

  * Make netcfg-static use the same menu item number as netcfg, no reason for
    it to differ.

 -- Joey Hess <joeyh@debian.org>  Fri, 18 Nov 2005 15:18:52 -0500

netcfg (1.17) unstable; urgency=low

  [ Thomas Hood ]
  * Don't make 'localhost.localdomain' the canonical hostname of 127.0.0.1.
    See Oct 2005 debian-devel discussion with Subject: localhost.localdomain,
    e.g., http://lists.debian.org/debian-devel/2005/10/msg00559.html

  [ Frans Pop ]
  * Remove netcfg-dhcp udeb as it is no longer used and maintained.
    The full netcfg is used instead. Closes: #329885.

  [ Geert Stappers ]
  * Identify client in dhcp-requests using "NetcfgDHClient" as
    dhcp-class-identifier. This allows a DHCP server to send DHCP user
    parameters. These parameters can be extracted from the lease file.
    A possible improvement is to allow the class identifier to be preseeded.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Bulgarian (bg.po) by Ognyan Kulev
  * Bengali (bn.po) by Baishampayan Ghose
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Hindi (hi.po) by Nishant Sharma
  * Icelandic (is.po) by David Steinn Geirsson
  * Italian (it.po) by Giuseppe Sacco
  * Korean (ko.po) by Sunjae park
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Dutch (nl.po) by Bart Cornelis
  * Norwegian Nynorsk (nn.po)
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (pt.po) by Miguel Figueiredo
  * Slovak (sk.po) by Peter Mann
  * Swedish (sv.po) by Daniel Nylander
  * Tagalog (tl.po) by Eric Pareja
  * Turkish (tr.po) by Recai Oktaş
  * Ukrainian (uk.po) by Eugeniy Meshcheryakov
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Frans Pop <fjp@debian.org>  Tue, 15 Nov 2005 20:59:54 +0100
